Add Schema, Incidents context

--- a/ServiceDesk.Web.Host/ServiceDesk.Web.Host.csproj
+++ b/ServiceDesk.Web.Host/ServiceDesk.Web.Host.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceDesk.Crashes.Context\ServiceDesk.Crashes.Context.csproj" />
+    <ProjectReference Include="..\ServiceDesk.Incidents.Context\ServiceDesk.Incidents.Context.csproj" />
+    <ProjectReference Include="..\ServiceDesk.Incidents\ServiceDesk.Incidents.csproj" />
+    <ProjectReference Include="..\ServiceDesk.Infrastructure.Context\ServiceDesk.Infrastructure.Context.csproj" />
+    <ProjectReference Include="..\ServiceDesk.SchemaBuild\ServiceDesk.SchemaBuild.csproj" />
+  </ItemGroup>
+
 </Project>
