--- a/ServiceDesk.Web.Host/appsettings.json
+++ b/ServiceDesk.Web.Host/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Development": "Server=DESKTOP-P76AP3B\\SQLEXPRESS01;Initial Catalog=ServiceDesk;User Id=sa;Password=1234567;Integrated Security=True;MultipleActiveResultSets=False;Connection Timeout=180;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
