--- a/ServiceDesk.Crashes.Context/ServiceDesk.Crashes.Context.csproj
+++ b/ServiceDesk.Crashes.Context/ServiceDesk.Crashes.Context.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceDesk.Infrastructure.Context\ServiceDesk.Infrastructure.Context.csproj" />
+  </ItemGroup>
 
 </Project>
