--- a/ServiceDesk.SchemaBuild/ServiceDesk.SchemaBuild.csproj
+++ b/ServiceDesk.SchemaBuild/ServiceDesk.SchemaBuild.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceDesk.Context.Infrastructure\ServiceDesk.Context.Infrastructure.csproj" />
+    <ProjectReference Include="..\ServiceDesk.Incidents\ServiceDesk.Incidents.csproj" />
     <ProjectReference Include="..\ServiceDesk.Infrastructure\ServiceDesk.Infrastructure.csproj" />
     <ProjectReference Include="..\ServiceDesk.SmartUI\ServiceDesk.SmartUI.csproj" />
   </ItemGroup>
