--- a/ServiceDesk.SmartUI/ServiceDesk.SmartUI.csproj
+++ b/ServiceDesk.SmartUI/ServiceDesk.SmartUI.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
